[tool.poetry]
name = "photographer"
version = "0.1.0"
description = ""
authors = ["Two Faced Janus <blcklptn@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyscreenshot = "^3.1"
numpy = "^2.2.1"
pillow = "^11.1.0"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
